fixed some UI issues - mostly with paralax covering view container

--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -121,7 +121,7 @@ header.template_header h1 span {
     top: -15px;
 }
 .fa-star {
-    font-size: 80px;
+    font-size: 50px;
     color: gold;
 }
 .template_home_stars {
@@ -170,7 +170,7 @@ nav.main-menu a:link, nav.main-menu a:hover, nav.main-menu a:focus, nav.main-men
 #templatemo_home {
     background: #154558 url(../images/jumbo_background.jpg) fixed;
     /*background:  url(../images/.jpg) fixed;*/
-    background-size: cover;
+    background-size: auto 130%;
     min-height: 100vh;
     padding-bottom: 130px;
     color: #fff;
@@ -268,6 +268,8 @@ nav.main-menu a:link, nav.main-menu a:hover, nav.main-menu a:focus, nav.main-men
 /***** Download *****/
 #templatemo_download { 
     background: url(../images/download_background.jpg) fixed;
+    background-size: auto 130%;
+    padding-bottom: 50px;
 }
 #templatemo_download h2 {
     font: normal normal 100 100px/150px 'Fira Sans', sans-serif;
@@ -318,7 +320,9 @@ nav.main-menu a:link, nav.main-menu a:hover, nav.main-menu a:focus, nav.main-men
 /***** Contact *****/
 #templatemo_contact {
     background: #455a64 url(../images/pattern_bg.png) fixed;
+    background-size: cover;
     color: #fff;
+    padding-bottom: 50px;
 }
 #templatemo_contact header h1 { color: #fff;}
 #templatemo_contact p, #templatemo_contact a  {
@@ -390,6 +394,7 @@ footer {
 @media (min-width: 992px) and (max-width: 1199px) {
     .show-menu {right: 50px;}
     nav.main-menu {right: 50px;}
+    .fa-star{font-size: 80px;}
 }
 @media (max-width: 991px) {
     .show-menu {right: 30px;}
